Setup Database Configuration

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,11 @@
 PORT_PROGRAM=3000
 PORT_AUDIT=4000
-DB_URL=mongodb://localhost:27017/mydatabase
 JWT_SECRET_KEY=hcl_assignment
+MONGO_USERNAME=tu768712
+MONGO_PASSWORD=X8wiwu441SM3BEvJ
+MONGO_DB_NAME=medical-research-program
+MONGO_URI="mongodb+srv://${MONGO_USERNAME}:${MONGO_PASSWORD}@hcltech-program.x7oqn.mongodb.net/${MONGO_DB_NAME}?retryWrites=true&w=majority&tls=true"
+MYSQL_DB_HOST=localhost
+MYSQL_DB_NAME=assignment
+MYSQL_DB_USER=root
+MYSQL_DB_PASS=
