--- a/backend/package.json
+++ b/backend/package.json
@@ -15,12 +15,15 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "mongodb": "^6.13.1",
     "mongoose": "^8.10.1",
+    "mysql2": "^3.12.0",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.1.9"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/mongodb": "^4.0.7",
     "@types/node": "^22.13.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
