Controller - Implementation for Medical Program

--- a/backend/.env
+++ b/backend/.env
@@ -9,3 +9,5 @@ MYSQL_DB_HOST=localhost
 MYSQL_DB_NAME=assignment
 MYSQL_DB_USER=root
 MYSQL_DB_PASS=
+PROGRAM_COLLECTION=medical-research-program
+PROGRAM_PARTICIPANT=medical-research-participant
