--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,8 @@
     "mysql2": "^3.12.0",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.1.9",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
