--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.13.1",
     "mongoose": "^8.10.1",
     "mysql2": "^3.12.0",
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^22.13.5",
     "ts-node": "^10.9.2",
